--- a/about.html
+++ b/about.html
@@ -27,13 +27,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: Moderna - v2.1.0
-  * Template URL: https://bootstrapmade.com/free-bootstrap-template-corporate-moderna/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -60,42 +53,12 @@
   </header><!-- End Header -->
 
   <main id="main">
-    <!-- ======= About Section ======= -->
-    <section class="about" data-aos="fade-up">
+    <!-- ======= skills Section ======= -->
+    <section class="skills" data-aos="fade-up">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-6">
-            <img src="assets/img/about.png" class="img-fluid">
-          </div>
-          <div class="col-lg-6 pt-4 pt-lg-0">
-            <h3>Hemanth Reddy Chinna ReddyVari</h3>
-            <p class="font-normal">
-             Son of CR Ramachandra Reddy & CR vani
-            </p>
-            <ul>
-              <li><i class="icofont-check-circled"></i> Born 27 December 1997.</li>
-              <li><i class="icofont-check-circled"></i> I'm a communicator, a storyteller and collaborator.</li>
-            </ul>
-            <p>
-              I'm specialized in bridging the tenets of brand identity with UX/UI to create innovative and 
-              impactful design solutions for the modern age.
-            </p>
-            <p>
-              Aside from design, I plays Cricket, runs long distances, and consistently binges episodes of Jabardasth-Telugu.
-            </p>
-            <p>
-              I love things as long as it is visual like art, sketch.
-              Outdoor games, Long rides, sketching, Regular Workouts. 
-              I believe "<b>Design adds value and beauty to a product or service faster than it adds costs!</b>" 
-            </p>
-            <p>
-              Thanks for taking time to check out my site!
-            </p>
-          </div>
-        </div>
-
+        <img src="assets/img/about.png" class="text-center img-fluid">
       </div>
-    </section><!-- End About Section -->
+    </section><!-- End skills Section -->
 
 <!-- ======= Services Section ======= -->
 <section class="experience">
@@ -105,9 +68,9 @@
         <h2>Education</h2>
         <div class="container d-flex align-items-stretch">
           <div class="icon-box icon-box-cyan">
-            <p class="title mt-3">Madanapalli Institute of Technology & Science</p>
+            <p class="title">Madanapalli Institute of Technology & Science</p>
             <p class="degree">Bachelor of Technology</p>
-            <p class="description"><i>Computer Science, Apr 2019</i></p>
+            <p class="description"><i>Computer Science & Engineering, Apr 2019</i></p>
           </div>
         </div>
       </div>
@@ -116,10 +79,10 @@
         <h2>Work Experience</h2>
         <div class="container d-flex align-items-stretch">
           <div class="icon-box icon-box-cyan">
-            <p class="title mt-3">Ojas Innovative Technologies Pvt Ltd</p>
+            <p class="title">Ojas Innovative Technologies Pvt Ltd</p>
             <p class="description"><i>Jan 2019 - Jul 2021</i></p>
             
-            <p class="title mt-3">Intelegencia Analytics Pvt Ltd</p>
+            <p class="title">Intelegencia Analytics Pvt Ltd</p>
             <p class="description"><i>Aug 2021 - Present</i></p>
             
           </div>
@@ -143,8 +106,8 @@
         <h2>Technical Skills</h2>
         <div class="container d-flex align-items-stretch">
           <div class="icon-box icon-box-cyan">
-            <p class="description">Adobe XD, Figma, Sketch, Adobe Photoshop, Adobe Illustrator, 
-              Adobe Dreamwaver, Html, Css, Typescript
+            <p class="description">Adobe XD, Figma, Sketch, Adobe Photoshop, Adobe Illustrator, Invision, Adobe Indesign, 
+              Adobe Dreamwaver, Html, Css, Javascript
             </p>
           </div>
         </div>
@@ -169,16 +132,16 @@
   <div class="container contact-container">
     <h2>Contact</h2>
     <div class="row">
-      <div class="icon-box col-md-12 col-lg-6">
+      <div class="icon-box col-md-12 col-lg-6 mt-4">
         <div class="icon"><i class="bx bx-mail-send"></i></div>
-        <h5 class="title"><a href="">Email Address</a></h5>
-        <p class="description">hemanthreddy737@gmail.com</p>
+        <h2 class="title"><a href="mailto:hemanthreddy737@gmail.com">Email Address</a></h2>
+        <p class="description"><a href="mailto:hemanthreddy737@gmail.com">hemanthreddy737@gmail.com</a></p>
       </div>
   
-      <div class="icon-box col-md-12 col-lg-6">
+      <div class="icon-box col-md-12 col-lg-6 mt-4">
         <div class="icon"><i class="bx bx-phone-call"></i></div>
-        <h5 class="title"><a href="">Mobile Number</a></h5>
-        <p class="description">+91 888 696 1494</p>
+        <h2 class="title"><a href="tel:+918886961494">Mobile Number</a></h2>
+        <p class="description"><a href="tel:+918886961494">+91 888 696 1494</a></p>
       </div>
     </div>
   </div>
@@ -195,7 +158,6 @@
         </div>
         <div class="social-links col-md-12 col-lg-4">
           <a href="https://www.behance.net/hemanthreddy4" target="_blank"class="behance"><i class="bx bxl-behance"></i></a>
-          <a href="https://www.instagram.com/hemanthr.48/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/hemanth-reddy-207b2b42/" target="_blank"class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
