--- a/index.html
+++ b/index.html
@@ -64,24 +64,14 @@
   <section id="hero" class="container">
     <div id="heroCarousel" class="container carousel carousel-fade" data-ride="carousel">
         <div class="container">
-          <div class="row">
-            <div class="col-lg-6 col-md-10 my-auto">
-              <h2 class="animate__animated animate__fadeInDown">Hemanth Reddy</span></h2>
-              <p class="animate__animated animate__fadeInUp designation">User Experience Designer</p>
-              <p class="animate__animated animate__fadeInUp">I like to design solutions to solve a problem which 
-                leave a good impact on lives of people.
+            <div class="col-lg-8 col-md-12 mt-5 pt-5 mx-auto">
+              <h2 class="animate__animated animate__fadeInUp designation text-center">I'm a User Experience Designer</h2>
+              <p class="animate__animated animate__fadeInUp text-center mt-3">I work at PS Intelegencia Analytics Ltd based in Noida, India
+                 with experience in delivering end-to-end UI/UX design for software products. I enjoy in designing solutions 
+                 to solve a problem which 
+                leave a good impact on lives of people and constantly looking forward to learn new things.
               </p>
-
-                <div class="social-links mt-3">
-                  <a href="https://www.instagram.com/hemanthr.48/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-                  <a href="https://www.linkedin.com/in/hemanth-reddy-207b2b42/" target="_blank"class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                  <a href="https://www.behance.net/hemanthreddy4" target="_blank"class="behance"><i class="bx bxl-behance"></i></a>
-                </div>
             </div>
-            <div class="col-lg-6 my-auto">
-              <img src="assets/img/dp.png" class="img-fluid img-responsive">
-            </div>
-        </div>
       </div>
      </div>
     </div>
@@ -89,35 +79,67 @@
 
   <main id="main">
     <!-- ======= Latest Works Section ======= -->
+    <section id="about-me">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 col-md-12">
+            <img src="assets/img/dp.jpg" class="img-fluid text-center">
+          </div>
+          <div class="col-lg-6 col-md-12 about">
+              <h2>About Me</h2>
+              <p>Hi! I'm Hemanth Reddy</p>
+                <ul class="mt-4">
+                  <li><i class="icofont-check-circled"></i> Born 27 December 1997.</li>
+                  <li><i class="icofont-check-circled"></i> I'm a communicator, a storyteller and collaborator.</li>
+                </ul>
+                <p>
+                  I'm specialized in bridging the tenets of brand identity with UX/UI to create innovative and 
+                  impactful design solutions for the modern age.
+                </p>
+                <p>
+                  Aside from design, I plays Cricket, runs long distances, and consistently binges episodes of Jabardasth-Telugu.
+                </p>
+                <p>
+                  I love things as long as it is visual like art, sketch.
+                  Outdoor games, Long rides, sketching, Regular Workouts. 
+                  I believe "<b>Design adds value and beauty to a product or service faster than it adds costs!</b>" 
+                </p>
+                <p>
+                  Thanks for taking time to check out my site!
+                </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ======= Latest Works Section ======= -->
     <section class="portfolio-home">
       <div class="container">
-        <h2>Design Works</h2>
-        <div class="row" portfolio-containerdata-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
-          <div class="col-lg-6 col-md-6 mt-3">
+        <div class="row">
+          <div class="col-lg-6 col-md-6 mt-3" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
             <a href="web4-portfolio-details.html" title="Travel Application">
             <div class="portfolio-item">
               <img src="assets/img/portfolio/web4.png" class="img-fluid">
             </div>
             <div class="time">
-              <p>December 2020</p>
+              <p>Feburary 2020</p>
             </div>
             <div class="portfolio-description">
-              <h4>Voyaah - Customized Trip Planner</h4>
+              <h2>Voyaah - Customized Trip Planner</h2>
               <p>
                 Empowering the Indian traveller with instant bookings and comprehensive choices and offering a range of best-value products and services.</div>
             </a>
           </div>
 
-          <div class="col-lg-6 col-md-6 mt-3">
+          <div class="col-lg-6 col-md-6 mt-3" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
             <a href="web5-portfolio-details.html" title="Home Maker">
             <div class="portfolio-item">
               <img src="assets/img/portfolio/web5.png" class="img-fluid">
             </div>
             <div class="time">
-              <p>March 2020</p>
+              <p>September 2020</p>
             </div>
             <div class="portfolio-description">
-              <h4>Home Maker - Home Utility Application</h4>
+              <h2>Home Maker - Home Utility Application</h2>
               <p>
                 Home Maker is a home utility control application for householders to control, track and maintain their home needs, tutor and grocery on daily basis.
               </p>
@@ -125,7 +147,7 @@
             </a>
           </div>
 
-          <div class="col-lg-6 col-md-6 mt-5">
+          <div class="col-lg-6 col-md-6 mt-5" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
             <a href="web3-portfolio-details.html" title="Finance Application">
             <div class="portfolio-item">
               <img src="assets/img/portfolio/web3.png" class="img-fluid">
@@ -134,38 +156,32 @@
               <p>March 2020</p>
             </div>
             <div class="portfolio-description">
-              <h4>VCredit - Instant Loan Application</h4>
+              <h2>VCredit - Instant Loan Application</h2>
               <p>
                 Instant Personal Loan platform for Students, aiming to become the first choice when it comes to quick and convenient Personal Loans.</p>
             </div>
             </a>
           </div>
 
-          <div class="col-lg-6 col-md-6 mt-5">
+          <div class="col-lg-6 col-md-6 mt-5" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
             <a href="web2-portfolio-details.html" title="Food Delivery Application">
               <div class="portfolio-item">
-                <img src="assets/img/portfolio/web2.png" class="img-fluid">
+                <img src="assets/img/portfolio/web7.png" class="img-fluid">
               </div>
               <div class="time">
-                <p>June 2020</p>
+                <p>October, 2019</p>
               </div>
               <div class="portfolio-description">
-                <h4>Order4You - Food Delivery Application</h4>
+                <h2>GoMechanic - Best Car Service | Car Repair</h2>
                 <p>
-                  B2B and B2C food delivery application offering quality service with customized packages.</p>
-              </div>
+                  GoMechanic is a network of technology-enabled car service garages, offering a seamless service experience at the convenience of a 
+                  tap. With our highly skilled, manufacturer recommended procedures and the promise of genuine spare parts.              </div>
             </a>
           </div>
 
         </div>
 
       </div>
-    </section>
-
-    <section id="more-projects">
-        <p class="text-center">
-          <a href="portfolio.html">More Projects</a>
-      </p>
     </section>
  
     <!-- ======= Features Section ======= -->
@@ -182,7 +198,7 @@
             <img src="assets/img/features-1.svg" class="img-fluid">
           </div>
           <div class="col-md-7 pt-4">
-            <h5>User Experience Design</h5>
+            <h2>User Experience Design</h2>
             <p>
               UX Design is User-Centered, is the process used to determine what the experience 
               will be like when a user interacts with your product.
@@ -199,7 +215,7 @@
             <img src="assets/img/features-2.svg" class="img-fluid">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1">
-            <h5>User Experience Research</h5>
+            <h2>User Experience Research</h2>
             <p>
               UX Researcher will be responsible for evaluating the usability, conceptualizing and forming product and website 
               improvements and features.
@@ -217,7 +233,7 @@
             <img src="assets/img/features-3.svg" class="img-fluid">
           </div>
           <div class="col-md-7 pt-5">
-            <h5>User Experience development</h5>
+            <h2>User Experience development</h2>
             <p>Wireframing . Prototyping . Iconography . Typography</p>
             <ul>
               <li><i class="icofont-check"></i> Wireframe is used to lay out content and functionality on a page.</li>
@@ -232,7 +248,7 @@
             <img src="assets/img/features-4.svg" class="img-fluid">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1">
-            <h5>User Interface Development</h5>
+            <h2>User Interface Development</h2>
             <p>
              Write well designed, testable and efficent code with markup languages with best software development practices.
             </p>
@@ -256,7 +272,6 @@
         </div>
         <div class="social-links col-md-12 col-lg-4">
           <a href="https://www.behance.net/hemanthreddy4" target="_blank"class="behance"><i class="bx bxl-behance"></i></a>
-          <a href="https://www.instagram.com/hemanthr.48/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/hemanth-reddy-207b2b42/" target="_blank"class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
