--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
       <nav class="nav-menu float-right d-none d-lg-block">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="About.html">About</a></li>
           <li class="active"><a href="portfolio.html">Portfolio</a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -76,14 +76,6 @@
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
-
-          <div class="col-lg-4 col-md-6 filter-app">
-            <a href="web2-portfolio-details.html" title="Food Delivery Application">
-            <div class="portfolio-item">
-              <img src="assets/img/portfolio/web2.png" class="img-fluid">
-            </div>
-            </a>
-          </div>
 
           <div class="col-lg-4 col-md-6 filter-app">
             <a href="web3-portfolio-details.html" title="Finance Application">
@@ -129,7 +121,7 @@
             <div class="portfolio-item">
               <img src="assets/img/portfolio/photos1.png" class="img-fluid">
               <div class="portfolio-info">
-                <h3><a href="assets/img/portfolio/photos1.png" data-gall="portfolioGallery" class="venobox" title="Breast Cancer Awareness">Cancer Awareness</a></h3>
+                <h2><a href="assets/img/portfolio/photos1.png" data-gall="portfolioGallery" class="venobox" title="Breast Cancer Awareness">Cancer Awareness</a></h2>
               </div>
             </div>
           </div>
@@ -138,7 +130,7 @@
             <div class="portfolio-item">
               <img src="assets/img/portfolio/photos2.png" class="img-fluid">
               <div class="portfolio-info">
-                <h3><a href="assets/img/portfolio/photos2.png" data-gall="portfolioGallery" class="venobox" title="Photographer">Photography</a></h3>
+                <h2><a href="assets/img/portfolio/photos2.png" data-gall="portfolioGallery" class="venobox" title="Photographer">Photography</a></h2>
               </div>
             </div>
           </div>
@@ -147,7 +139,7 @@
             <div class="portfolio-item">
               <img src="assets/img/portfolio/photos4.png" class="img-fluid">
               <div class="portfolio-info">
-                <h3><a href="assets/img/portfolio/photos4.png" data-gall="portfolioGallery" class="venobox" title="Home Maker">Home Maker</a></h3>
+                <h2><a href="assets/img/portfolio/photos4.png" data-gall="portfolioGallery" class="venobox" title="Home Maker">Home Maker</a></h2>
               </div>
             </div>
           </div>
@@ -167,7 +159,6 @@
         </div>
         <div class="social-links col-md-12 col-lg-4">
           <a href="https://www.behance.net/hemanthreddy4" target="_blank"class="behance"><i class="bx bxl-behance"></i></a>
-          <a href="https://www.instagram.com/hemanthr.48/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/hemanth-reddy-207b2b42/" target="_blank"class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
