--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <section id="hero" class="container">
     <div id="heroCarousel" class="container carousel carousel-fade" data-ride="carousel">
         <div class="container">
-            <div class="col-lg-8 col-md-12 mt-5 pt-5 mx-auto">
+            <div class="col-lg-9 col-md-12 mt-5 pt-5 mx-auto">
               <h2 class="animate__animated animate__fadeInUp designation text-center">I'm a User Experience Designer</h2>
               <p class="animate__animated animate__fadeInUp text-center mt-3">I work at PS Intelegencia Analytics Ltd based in Noida, India
                  with experience in delivering end-to-end UI/UX design for software products. I enjoy in designing solutions 
@@ -79,7 +79,7 @@
 
   <main id="main">
     <!-- ======= Latest Works Section ======= -->
-    <section id="about-me">
+    <section id="about">
       <div class="container">
         <div class="row">
           <div class="col-lg-6 col-md-12">
