--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
   <section id="hero" class="container">
     <div id="heroCarousel" class="container carousel carousel-fade" data-ride="carousel">
         <div class="container">
-            <div class="col-lg-9 col-md-12 mt-5 pt-5 mx-auto">
+            <div class="col-lg-9 col-md-12 text-container mx-auto">
               <h2 class="animate__animated animate__fadeInUp designation text-center">I'm a User Experience Designer</h2>
-              <p class="animate__animated animate__fadeInUp text-center mt-3">I work at PS Intelegencia Analytics Ltd based in Noida, India
+              <p class="animate__animated animate__fadeInUp text-center mt-3">I work at <b>PS Intelegencia Analytics Ltd</b> based in Noida, India
                  with experience in delivering end-to-end UI/UX design for software products. I enjoy in designing solutions 
                  to solve a problem which 
-                leave a good impact on lives of people and constantly looking forward to learn new things.
+                leave a good impact on lives of people and <b>I constantly looking forward to learn new things</b>.
               </p>
             </div>
       </div>
@@ -87,7 +87,7 @@
           </div>
           <div class="col-lg-6 col-md-12 about">
               <h2>About Me</h2>
-              <p>Hi! I'm Hemanth Reddy</p>
+              <p>Hi! <b>I'm Hemanth Reddy</b></p>
                 <ul class="mt-4">
                   <li><i class="icofont-check-circled"></i> Born 27 December 1997.</li>
                   <li><i class="icofont-check-circled"></i> I'm a communicator, a storyteller and collaborator.</li>
