minor alignment changes

--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
 
 </section><!-- End Services Section -->
 
-<section class="why-us" data-aos="fade-up" date-aos-delay="200">
+<section id="why-us" data-aos="fade-up" date-aos-delay="200">
   <div class="container contact-container">
     <h2>Contact</h2>
     <div class="row">
