--- a/index.html
+++ b/index.html
@@ -61,24 +61,24 @@
     </div>
   </header><!-- End Header -->
 
-  <section id="hero" class="container">
-    <div id="heroCarousel" class="container carousel carousel-fade" data-ride="carousel">
-        <div class="container">
-            <div class="col-lg-9 col-md-12 text-container mx-auto">
-              <h2 class="animate__animated animate__fadeInUp designation text-center">I'm a User Experience Designer</h2>
-              <p class="animate__animated animate__fadeInUp text-center mt-3">I work at <b>PS Intelegencia Analytics Ltd</b> based in Noida, India
-                 with experience in delivering end-to-end UI/UX design for software products. I enjoy in designing solutions 
-                 to solve a problem which 
-                leave a good impact on lives of people and <b>I constantly looking forward to learn new things</b>.
-              </p>
-            </div>
-      </div>
-     </div>
-    </div>
-  </section> 
-
   <main id="main">
-    <!-- ======= Latest Works Section ======= -->
+    <!-- ======= Hero Section ======= -->
+    <section id="hero" class="container">
+      <div id="heroCarousel" class="container carousel carousel-fade" data-ride="carousel">
+          <div class="container">
+              <div class="col-lg-9 col-md-12 text-container mx-auto">
+                <h2 class="animate__animated animate__fadeInUp designation text-center">I'm a User Experience Designer</h2>
+                <p class="animate__animated animate__fadeInUp text-center mt-3">I work at <b>PS Intelegencia Analytics Ltd</b> based in Noida, India
+                   with experience in delivering end-to-end UI/UX design for software products. I enjoy in designing solutions 
+                   to solve a problem which 
+                  leave a good impact on lives of people and <b>I constantly looking forward to learn new things</b>.
+                </p>
+              </div>
+        </div>
+       </div>
+      </div>
+    </section> 
+    <!-- ======= About Me Section ======= -->
     <section id="about">
       <div class="container">
         <div class="row">
@@ -114,6 +114,7 @@
     <!-- ======= Latest Works Section ======= -->
     <section class="portfolio-home">
       <div class="container">
+        <h2>My Projects</h2>
         <div class="row">
           <div class="col-lg-6 col-md-6 mt-3" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
             <a href="web4-portfolio-details.html" title="Travel Application">
