adding lc use case

--- a/about.html
+++ b/about.html
@@ -157,8 +157,8 @@
           &copy; Copyright <strong><span>Hemanth Reddy</span></strong>. All Rights Reserved
         </div>
         <div class="social-links col-md-12 col-lg-4">
-          <a href="https://www.behance.net/hemanthreddy4" target="_blank"class="behance"><i class="bx bxl-behance"></i></a>
-          <a href="https://www.linkedin.com/in/hemanth-reddy-207b2b42/" target="_blank"class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.behance.net/hemanthreddy4" target="_blank"class="behance">Behance</a>
+          <a href="https://www.linkedin.com/in/hemanth-reddy-207b2b42/" target="_blank"class="linkedin">Linkedin</a>
         </div>
       </div>
     </div>
