--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
           </div>
         </div>
 
-        <div class="row" data-aos="fade-up">
+        <div class="row shadow py-5" data-aos="fade-up">
           <div class="col-md-5 order-1 order-md-2">
             <img src="assets/img/features-4.svg" class="img-fluid">
           </div>
@@ -272,8 +272,8 @@
           &copy; Copyright <strong><span>Hemanth Reddy</span></strong>. All Rights Reserved
         </div>
         <div class="social-links col-md-12 col-lg-4">
-          <a href="https://www.behance.net/hemanthreddy4" target="_blank"class="behance"><i class="bx bxl-behance"></i></a>
-          <a href="https://www.linkedin.com/in/hemanth-reddy-207b2b42/" target="_blank"class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.behance.net/hemanthreddy4" target="_blank"class="behance">Behance</a>
+          <a href="https://www.linkedin.com/in/hemanth-reddy-207b2b42/" target="_blank"class="linkedin">Linkedin</a>
         </div>
       </div>
     </div>
