--- a/paybill.html
+++ b/paybill.html
@@ -51,7 +51,7 @@
       <nav class="nav-menu float-right d-none d-lg-block">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="About.html">About</a></li>
           <li class="active"><a href="portfolio.html">Portfolio</a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -63,97 +63,11 @@
 
     <!-- ======= Portfolio Section ======= -->
     <section class="portfolio">
-      <div class="container">
 
-        <div class="row">
-          <div class="col-lg-12">
-            <ul id="portfolio-flters">
-              <!-- <li data-filter="*" class="filter-active">All</li> -->
-              <li data-filter=".filter-app" class="filter-active">UX</li>
-              <li data-filter=".filter-photos">Illustrations</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="row portfolio-container" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
-
-          <div class="col-lg-4 col-md-6 filter-app">
-            <a href="web3-portfolio-details.html" title="Finance Application">
-            <div class="portfolio-item">
-              <img src="assets/img/portfolio/web3.png" class="img-fluid">
-            </div>
-            </a>
-          </div>
-
-          <div class="col-lg-4 col-md-6 filter-app">
-            <a href="web4-portfolio-details.html" title="Travel Application">
-            <div class="portfolio-item">
-              <img src="assets/img/portfolio/web4.png" class="img-fluid">
-            </div>
-            </a>
-          </div>
-
-          <div class="col-lg-4 col-md-6 filter-app">
-            <a href="web5-portfolio-details.html" title="Home Maker">
-            <div class="portfolio-item">
-              <img src="assets/img/portfolio/web5.png" class="img-fluid">
-            </div>
-            </a>
-          </div>  
-
-          <div class="col-lg-4 col-md-6 filter-app">
-            <a href="web6-portfolio-details.html" title="Fashion Fit">
-            <div class="portfolio-item">
-              <img src="assets/img/portfolio/web6.png" class="img-fluid">
-            </div>
-            </a>
-          </div>  
-
-          <div class="col-lg-4 col-md-6 filter-app">
-            <a href="web7-portfolio-details.html" title="Automobile Service">
-            <div class="portfolio-item">
-              <img src="assets/img/portfolio/web7.png" class="img-fluid">
-            </div>
-            </a>
-          </div>  
-
-          <div class="col-lg-4 col-md-6 filter-app">
-            <a href="web8-portfolio-details.html" title="Language Career">
-            <div class="portfolio-item">
-              <img src="assets/img/portfolio/web8.png" class="img-fluid">
-            </div>
-            </a>
-          </div> 
-
-          <div class="col-lg-4 col-md-6 filter-photos">
-            <div class="portfolio-item">
-              <img src="assets/img/portfolio/photos1.png" class="img-fluid">
-              <div class="portfolio-info">
-                <h2><a href="assets/img/portfolio/photos1.png" data-gall="portfolioGallery" class="venobox" title="Breast Cancer Awareness">Cancer Awareness</a></h2>
-              </div>
-            </div>
-          </div>
-          
-          <div class="col-lg-4 col-md-6 filter-photos">
-            <div class="portfolio-item">
-              <img src="assets/img/portfolio/photos2.png" class="img-fluid">
-              <div class="portfolio-info">
-                <h2><a href="assets/img/portfolio/photos2.png" data-gall="portfolioGallery" class="venobox" title="Photographer">Photography</a></h2>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 filter-photos">
-            <div class="portfolio-item">
-              <img src="assets/img/portfolio/photos4.png" class="img-fluid">
-              <div class="portfolio-info">
-                <h2><a href="assets/img/portfolio/photos4.png" data-gall="portfolioGallery" class="venobox" title="Home Maker">Home Maker</a></h2>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
+        <img src="assets/img/portfolio/demo-1.png" class="img-fluid">
+        <a href="https://xd.adobe.com/view/1878abd4-86c4-403b-93be-5672668058c8-4d2b/?fullscreen" target="_blank">
+          <img src="assets/img/portfolio/demo-2.png" class="img-fluid">
+        </a>
     </section><!-- End Portfolio Section -->
 
 
